--- a/Content/Style.css
+++ b/Content/Style.css
@@ -5,6 +5,23 @@
   font-family: 'PT Sans Caption', sans-serif;
 }
 
+body {
+  position: relative;
+}
+body:after {
+  content : "";
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-image: url(Media/floor2.png); 
+  background-position: center;
+  width: 100%;
+  height: 100%;
+  opacity : 0.1;
+  z-index: -1;
+}
+
 /* ==========================================================================
  Header
   ========================================================================= */
@@ -232,6 +249,7 @@ main{
 }
 
 .wrapper {
+  top: -300px;
 	max-width: 90%;
 	margin: 0 20px;
 	grid-gap: 10px;
@@ -244,8 +262,9 @@ main{
   
   .wrapper {
 	display: grid;
-	margin: 150px auto;
-	grid-template-columns: repeat(auto-fill, minmax(800px, 1fr));
+  margin: auto;
+  margin-bottom: 50px;
+	grid-template-columns: repeat(auto-fill, minmax(80%, 1fr));
   grid-auto-rows: minmax(250px, auto);
   grid-gap: 50px;
   }
@@ -263,7 +282,7 @@ main{
 	justify-content: center;
   align-items: bottom;
   box-shadow: -8px 7px 6px rgba(0, 0, 0, 0.1); 
-  /*clip-path: polygon(4% 0, 96% 0, 100% 10%, 100% 89%, 97% 100%, 4% 100%, 0 89%, 0 12%);*/
+  clip-path: polygon(4% 0, 96% 0, 100% 10%, 100% 89%, 97% 100%, 4% 100%, 0 89%, 0 12%);
   }
 
   @supports (display: grid) {
@@ -286,15 +305,17 @@ main{
 figure h2,
 figure h4 {
 margin: 0;
-text-transform: uppercase;
 }
 figure h2 {
-font-weight: 400;
-font-size: 3em;
+text-transform: uppercase;
+font-size: 2.5em;
 font-family: 'PT Sans Caption', sans-serif;
+font-weight: 800;
 color: #000000;
 writing-mode: vertical-rl;
 margin-top: -280px;
+margin-left: -180px;
+text-align: center;
 }
 figure h4 {
 display: grid;
