--- a/Content/Style.css
+++ b/Content/Style.css
@@ -18,7 +18,7 @@ body:after {
   background-position: center;
   width: 100%;
   height: 100%;
-  opacity : 0.1;
+  opacity : 0.3;
   z-index: -1;
 }
 
@@ -225,7 +225,7 @@ main{
   background-size:cover;
   background-color: transparent;
   background-blend-mode: screen;
-  animation: filter 1s ease-in-out infinite;
+  animation: filter 0.5s ease-in-out infinite;
 }
 
 @keyframes filter {
@@ -234,12 +234,14 @@ main{
     -moz-filter: hue-rotate(0);
     -ms-filter: hue-rotate(0);
     filter: hue-rotate(0);
+    transform: rotateX(10deg)
   }
   to {
     -webkit-filter: hue-rotate(360deg);
     -moz-filter: hue-rotate(360deg);
     -ms-filter: hue-rotate(360deg);
     filter: hue-rotate(360deg);
+    transform: rotateX(-10deg)
   }
 }
 
@@ -267,6 +269,7 @@ main{
 	grid-template-columns: repeat(auto-fill, minmax(80%, 1fr));
   grid-auto-rows: minmax(250px, auto);
   grid-gap: 50px;
+  filter: drop-shadow(-7px 7px 5px rgba(0, 0, 0, 1));
   }
   
   .panel {
@@ -276,13 +279,13 @@ main{
 	height: 300px;
 	content: contain;
 	background: rgb(138,252,255);
-  background: linear-gradient(122deg, rgba(138,252,255,0.5494572829131652) 0%, rgba(169,175,194,1) 42%);
+  background: linear-gradient(122deg, rgba(138,252,255,0.5494572829131652) 0%, rgba(205, 208, 221, 0.87) 42%);
 	contain: cover;
-	display: flex;
+  display: grid;
+  grid-template-columns: 150px 20% 10% 70%;
 	justify-content: center;
   align-items: bottom;
-  box-shadow: -8px 7px 6px rgba(0, 0, 0, 0.1); 
-  clip-path: polygon(4% 0, 96% 0, 100% 10%, 100% 89%, 97% 100%, 4% 100%, 0 89%, 0 12%);
+  clip-path: polygon(4% 0, 96% 0, 100% 10%, 100% 89%, 96% 100%, 4% 100%, 0 89%, 0 12%);
   }
 
   @supports (display: grid) {
@@ -291,48 +294,70 @@ main{
 	}
   }
 
-.image-wrap{
-  filter: drop-shadow(-7px 7px 5px rgba(0, 0, 0, 1));
-}
 
 .figure img{
-  margin-top: -13px;
-  width: 800px;
-  height: 326px;
+  grid-column: 2 / 3;
+  grid-row: 1;
+  position: absolute;
+  width: calc(35vw + (300 - 35) * ((100vw - 300px) / (1600 - 300)));
+  height: 300px;
   clip-path: polygon(42% 0, 52% 53%, 41% 100%, 8% 100%, 17% 51%, 8% 0);
+  transition: 1s ease-in-out;
+  opacity: 0.7;
 }
+
+.figure img:hover{
+  animation: seehere 0.5s ease-in-out infinite;
+  transition: 300ms ease-in-out;
+}
+
+.visit{
+  transform: translateX(2000px)
+}
+
+@keyframes seehere {
+  0% {
+transform: translateX(0)
+  }
+  50% {
+    transform: translateX(20px)
+  }
+  100%
+  {
+    transform: translateX(0)
+  }
+}
+
+
 
 figure h2,
 figure h4 {
 margin: 0;
 }
-figure h2 {
+h2 {
+grid-column: 1 / 2;
+grid-row: 1;
 text-transform: uppercase;
-font-size: 2.5em;
+font-size: 2em;
 font-family: 'PT Sans Caption', sans-serif;
 font-weight: 800;
 color: #000000;
 writing-mode: vertical-rl;
-margin-top: -280px;
-margin-left: -180px;
-text-align: center;
+align-self: center;
+
 }
-figure h4 {
+h4 {
+grid-row: 1;
+grid-column: 4 / 5;
 display: grid;
-margin-left: 450px;
-margin-top: -200px;
+width: 50vw;
 font-weight: 700;
 padding: 5px;
 color: #000000;
-font-size: 1em;
-}
-
-figure a {
-position: absolute;
-top: 0;
-bottom: 0;
-left: 0;
-right: 0;
+font-size: calc(13px + (18 - 13) * ((100vw - 300px) / (1600 - 300)));
+justify-self: center;
+align-self: center;
+line-height: 20px;
 }
 
 /* ==========================================================================
