--- a/Content/Style.css
+++ b/Content/Style.css
@@ -1,3 +1,82 @@
+.team-area{
+  width: 90%;
+  display: grid;
+  margin: 0 auto;
+  margin-bottom: 50px;
+  grid-template-columns: repeat(auto-fill, minmax(500px, 1fr));
+  grid-auto-rows: minmax(250px, auto);
+  grid-gap: 10px;
+}
+
+.single-team{
+  height: 400px;
+  padding:25px; 
+  position: relative;
+  display: flex;
+  align-items: flex-end;
+  transition: .6s ease-out;
+  box-shadow: 0 10px 10px rgba(0,0,0,0.5)
+}
+
+.single-team:hover{
+  transform: translateY(15px)
+}
+
+.single-team:hover:before{
+  opacity: 1;
+}
+
+.single-team:hover .team-text{
+  opacity: 1;
+  transform: translateY(0);
+}
+
+
+.single-team:before{
+  content: '';
+  position: absolute;
+  top:0;
+  left:0;
+  display: block;
+  height: 100%;
+  width: 100%;
+  background: linear-gradient(to top, #94cef2, transparent);
+  z-index: 2;
+  opacity: 0;
+}
+
+.single-team img{
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top:0;
+  left: 0;
+  object-fit: cover;
+}
+
+
+.single-team .team-text{
+  position: relative;
+  z-index: 3;
+  color: #fff;
+  opacity: 0;
+  transform: translateY(60px);
+  transition: 0.5s;
+}
+
+.team-text h2{
+  margin: 0;
+  font-family: fantasy;
+  /* letter-spacing: 3px; */
+}
+
+.team-text p{
+  /* letter-spacing: 1px; */
+  font-size: 15px;
+  margin-top: 8px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
 .mainwrapper-kontakt {
     display: grid;
     grid-template-columns: repeat(14, 1fr);
@@ -546,6 +625,7 @@ transform: translateX(0)
     transform: translateX(0)
   }
 }
+
 
 figure h2,
 figure h4 {
